--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,53 @@
-h5py
-pandas
+alembic==1.16.4
+annotated-types==0.7.0
+anyio==4.10.0
+bidict==0.23.1
+certifi==2025.8.3
+click==8.2.1
+contourpy==1.3.3
+cycler==0.12.1
+fonttools==4.59.1
+granian==2.5.0
+h11==0.16.0
+h5py==3.14.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+Jinja2==3.1.6
+kiwisolver==1.4.9
+Mako==1.3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+mdurl==0.1.2
+numpy==2.3.2
+packaging==25.0
+pandas==2.3.1
+pillow==11.3.0
+platformdirs==4.3.8
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-engineio==4.12.2
+python-multipart==0.0.20
+python-socketio==5.13.0
+pytz==2025.2
+redis==6.4.0
 reflex==0.8.5
+reflex-hosting-cli==0.1.54
+reflex-pyplot==0.2.1
+rich==14.1.0
+simple-websocket==1.1.0
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+sqlmodel==0.0.24
+starlette==0.47.2
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+watchfiles==1.1.0
+wrapt==1.17.3
+wsproto==1.2.0
